src/Base/main/default/objects/Asset/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Indicates the condition of the asset</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Damaged - Must Repair</fullName>
            </value>
            <value>
                <fullName>Damaged - Sell with Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>