src/Base/main/default/objects/Asset/fields/Imported_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Imported_Model_Name__c</fullName>
    <label>Imported Model Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>